--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -33,7 +33,7 @@ hooks:
       echo "# Entering Miniconda...   #"
       echo "###########################"
 
-      conda activate
+      conda activate base
       conda update -n base -c defaults conda
       conda list
 
@@ -42,6 +42,9 @@ hooks:
       echo "###########################"
 
       conda create -n mro_env mro-base
+
+      echo "CAT activation file:"
+      cat /app/miniconda/envs/mro_env/etc/conda/activate.d/activate-binutils_linux-64.sh
       conda activate mro_env
 
       echo "Installed R packages:"
