--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -20,6 +20,8 @@ hooks:
       set -e
       # pipenv install --system --deploy
       echo $0
+      /bin/bash
+      echo $0
       exit 1
       curl https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -o conda.sh
 
