--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -26,6 +26,9 @@ hooks:
       conda update -n base -c defaults conda
       conda info
 
+      conda create -n mro_env r-base
+      conda activate mro_env
+
 # The size of the persistent disk of the application (in MB).
 disk: 1024
 # The relationships of the application with services or other applications.
