--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -28,6 +28,10 @@ hooks:
 
 # The size of the persistent disk of the application (in MB).
 disk: 1024
+mounts:
+    ".jupyter":
+        source: local
+        source_path: ".jupyter"
 # The relationships of the application with services or other applications.
 #
 # The left-hand side is the name of the relationship as it will be exposed
