--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -53,7 +53,7 @@ mounts:
 # The configuration of app when it is exposed to the web.
 web:
     commands:
-        start: jupyter notebook --config="~/.jupyter/jupyter_notebook_config.py"
+        start: conda activate r-env && jupyter notebook --config="~/.jupyter/jupyter_notebook_config.py"
     upstream:
         socket_family: tcp
         protocol: http
