--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -5,5 +5,18 @@ http://{default}/:
 https://{default}/:
   type: upstream
   upstream: "app:http"
+  primary: true
+  id: http
+  cache:
+      enabled: false
+
+http://ws.{default}/:
+  type: redirect
+  to: "https://ws.{default}/"
+
+https://ws.{default}/:
+  type: upstream
+  upstream: "app:http"
+  id: ws
   cache:
       enabled: false
