--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -32,7 +32,8 @@ disk: 2048
 # The configuration of app when it is exposed to the web.
 web:
     commands:
-        start: bash ./start_command.sh
+        # start: bash ./start_command.sh
+        start: sleep infinity
     upstream:
         socket_family: tcp
         protocol: http
